# flask.app

./: .dockerignore  .env.sample  .flaskenv  .gitignore  Dockerfile  README.md  TODO.md  build_static.sh  celerybeat-schedule.db  config.py  docker-compose.debug.yml  docker-compose.staging.yaml  docker-compose.yml  docker-compose.yml.prod  package.json  project.env  pyproject.toml  requirements.txt  start_api.sh  start_server.sh  start_web.sh  start_worker.sh  tailwind.config.js  tox.ini  tsconfig.json  version  webpack.config.js  webpack.dev.js  webpack.prod.js  wsgi.py
.github/workflows/: build_deploy.yaml  python-app.yml  test.yaml
api/: __init__.py  oauth2.py  utils.py
api/dependency/: __init__.py  database.py  user.py
api/routes/: __init__.py  auth.py  user.py
app/: __init__.py  database.py  logger.py  utils.py
app/api/: __init__.py
app/api/dependency/: __init__.py  user.py
app/api/router/: user.py
app/commands/: __init__.py
app/controllers/: __init__.py  pagination.py
app/controllers/celery/: __init__.py
app/forms/: __init__.py  auth.py  user.py
app/models/: Untitled-1.html  __init__.py  user.py  utils.py
app/schema/: __init__.py  pagination.py  token.py  user.py
app/static/css/: main.css  styles.css  web.css
app/static/js/: base.d.ts  base.js  flash.js  flowbite.min.js  main.js  main.js.map  user.d.ts  user.js
app/templates/: base.html  current_user_edit_modal.html  error.html  footer.html  header.html  index.html  list.html  modal.html  sidebar.html  spinner.html  toast.html  user_add_modal.html  user_edit_modal.html  users.html
app/templates/auth/: activate.html  forgot.html  login.htm  login.html  login2.html  register.html  reset_password.html
app/templates/email/: confirm.htm  confirm.html  remind.htm
app/templates/user/: add.html  add_modal.html  edit.html  edit_current.html  edit_modal.html  users.html
app/views/: __init__.py  auth.py  list.py  main.py  user.py
migrations/versions/: 0f35a16ff79a_init.py  1abc78b0c6bd_user_uuid.py  395b3731b506_init.py  4c619e2d721f_reset_pass_field.py  6a7135cb0174_init.py  766427519c34_init.py  e438bccc9589_user_is_deleted.py
src/: base.ts  main.ts  styles.css  user.ts
test_api/: conftest.py  test.env  test_auth.py  test_data.json  test_data.py  test_users.py
test_flask/: conftest.py  test.env  test_auth.py  test_users.py  utils.py
test_flask/db/: __init__.py
tests/: conftest.py  test_auth.py  test_list.py  test_users.py  utils.py
tests/db/: __init__.py
